more consistent look for inputs across browsers ; fixes broken color input on iphone

--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -1,4 +1,5 @@
 .slider{
+  box-shadow: none;
     -webkit-appearance: none;
     background: transparent;
     cursor: pointer;
@@ -22,9 +23,14 @@
   }
   
   .slider::-webkit-slider-runnable-track{
+    box-shadow: none;
+    -webkit-appearance: none;
+
     background: var(--slider-track-color);
     height: var(--slider-track-height);
     border-radius: calc(var(--slider-track-height) / 2);
+
+
 
     background-image: linear-gradient(
         90deg,
@@ -42,8 +48,10 @@
     );
   }
 
-  .slider::-webkit-slider-thumb{
+  .slider::-webkit-slider-thumb{    
+    box-shadow: none;
     -webkit-appearance: none;
+
     height: var(--slider-thumb-height);
     width: var(--slider-thumb-width);
     border-radius: calc(var(--slider-thumb-height)/2);
@@ -66,7 +74,9 @@
 
 
   .slider::-moz-range-track{
-    /* background: var(--slider-track-color); */
+    box-shadow: none;
+    -webkit-appearance: none;
+
     height: var(--slider-track-height);
     border-radius: calc(var(--slider-track-height) / 2);
   
@@ -77,7 +87,7 @@
     );
   }
   
-  .slider:hover::-moz-range-track{
+  .slider:hover::-moz-range-track{    
     background-image: linear-gradient(
         90deg,
         var(--slider-progress-color-hover) var(--slider-progress-percent),
@@ -88,7 +98,9 @@
   
   
   .slider::-moz-range-thumb{
-    /* -webkit-appearance: none; */
+    box-shadow: none;
+    -webkit-appearance: none;
+
     margin-top: calc(var(--slider-track-height/2) - var(--slider-thumb-height)/2);
     height: var(--slider-thumb-height);
     width: var(--slider-thumb-width);
